<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/user_status_activity"
    tools:context=".ui.login.UserStatusActivity">

    <TextView
        android:id="@+id/userStatusQuestion"
        android:layout_width="336dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/user_status_question_text"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/questionAnimation"
        android:layout_width="315dp"
        android:layout_height="297dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/question_animation" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/schoolAnimation"
        android:layout_width="315dp"
        android:layout_height="297dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/school" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/graduationAnimation"
        android:layout_width="315dp"
        android:layout_height="297dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/graduation" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="290dp"
        android:layout_height="157dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userStatusQuestion"
        app:layout_constraintVertical_bias="0.246">

        <RadioButton
            android:id="@+id/hsStudentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:onClick="onRadioButtonChecked"
            android:text="@string/hs_student_button_text"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/univStudentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/open_sans"
            android:onClick="onRadioButtonChecked"
            android:text="@string/univ_student_button_text"
            android:textSize="20sp" />

    </RadioGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/nextUserStatusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/next_button_text"
        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985" />

</androidx.constraintlayout.widget.ConstraintLayout>