<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/create_user_profile_activity"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true"
    tools:context=".ui.login.CreateUserProfileActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/univNameInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:hint="@string/univ_name_input"
        android:textColorHint="@drawable/text_box_stroke_color"
        app:boxStrokeColor="@drawable/text_box_stroke_color"
        app:errorEnabled="true"
        app:hintTextColor="@drawable/text_box_stroke_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.213">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/univNameInputEditText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="text|textAutoComplete" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/univMajorInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:layout_marginTop="25dp"
        android:hint="@string/univ_major_input"
        android:textColorHint="@drawable/text_box_stroke_color"
        app:hintTextColor="@drawable/text_box_stroke_color"
        app:boxStrokeColor="@drawable/text_box_stroke_color"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/univNameInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/univMajorInputEditText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="text|textAutoComplete" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/univGpaInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:layout_marginTop="25dp"
        android:hint="@string/univ_grade_input"
        android:textColorHint="@drawable/text_box_stroke_color"
        app:hintTextColor="@drawable/text_box_stroke_color"
        app:boxStrokeColor="@drawable/text_box_stroke_color"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/univMajorInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/univGpaInputEditText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/univEntranceScoreInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:layout_marginTop="25dp"
        android:hint="@string/univ_entrance_input"
        android:textColorHint="@drawable/text_box_stroke_color"
        app:hintTextColor="@drawable/text_box_stroke_color"
        app:boxStrokeColor="@drawable/text_box_stroke_color"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/univGpaInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/univEntranceScoreInputEditText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/univUserBio"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="257dp"
        android:layout_height="155dp"
        android:layout_marginTop="25dp"
        android:hint="@string/univ_user_bio_input"
        android:textColorHint="@drawable/text_box_stroke_color"
        app:hintTextColor="@drawable/text_box_stroke_color"
        app:boxStrokeColor="@drawable/text_box_stroke_color"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/univEntranceScoreInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/univUserBioEditText"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:minLines="2"
            android:lines="50"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/nextUserProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/next_button_text"
        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985" />

    <TextView
        android:id="@+id/enterProfileInfoPrompt"
        android:layout_width="248dp"
        android:layout_height="34dp"
        android:fontFamily="@font/open_sans"
        android:paddingStart="2dp"
        android:text="@string/user_profile_prompt"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106" />

    <TextView
        android:id="@+id/userGreetText"
        android:layout_width="246dp"
        android:layout_height="58dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/greet_user_text"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView2"
        android:layout_width="138dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/enterProfileInfoPrompt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/bookanim2" />
</androidx.constraintlayout.widget.ConstraintLayout>