...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />

    <ImageButton
        android:id="@+id/sign_in_button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="@string/common_signin_button_text"
        android:scaleType="fitXY"
...
