...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:id="@+id/view_user_stats_activity"
    tools:context=".ui.stats.ViewStatsActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filterSearchBar"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="364dp"
...
